--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ nbproject/private/private.properties
 *.xml
 *.properties
 *.properties
+nbproject/project.properties
+nbproject/private/private.properties
