--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.output=${dist.jlink.dir}/ProyectoTransversal
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Usuario\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=D:\\Escritorio\\jcalendar-1.4.jar
+file.reference.mariadb-java-client-3.2.0.jar=D:\\Descargas\\mariadb-java-client-3.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.mariadb-java-client-3.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
