--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ nbproject/private/private.properties
 nbproject/project.properties
 nbproject/private/private.properties
 nbproject/private/private.xml
+*.properties
