--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,9 @@ excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Usuario\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=D:\\Escritorio\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=C:\\Users\\Lean\\Documents\\Argentina Programa\\calender\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-3=C:\\Users\\Usuario\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.zip=C:\\Users\\Usuario\\Downloads\\jcalendar-1.4.zip
+file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Usuario\\Downloads\\mariadb-java-client-3.0.11.jar
 file.reference.mariadb-java-client-3.1.4.jar=C:\\Users\\Lean\\Documents\\Argentina Programa\\mariadb-java-client-3.1.4.jar
 file.reference.mariadb-java-client-3.2.0.jar=D:\\Descargas\\mariadb-java-client-3.2.0.jar
 includes=**
@@ -45,7 +48,10 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.mariadb-java-client-3.2.0.jar}:\
     ${file.reference.jcalendar-1.4.jar-2}:\
-    ${file.reference.mariadb-java-client-3.1.4.jar}
+    ${file.reference.mariadb-java-client-3.1.4.jar}:\
+    ${file.reference.jcalendar-1.4.zip}:\
+    ${file.reference.mariadb-java-client-3.0.11.jar}:\
+    ${file.reference.jcalendar-1.4.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
