--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ nbproject/project.properties
 nbproject/private/private.properties
 nbproject/private/private.xml
 *.properties
+nbproject/private/private.properties
+nbproject/private/private.xml
+*.properties
+*.xml
