--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ProyectoTransversal
+application.vendor=crist
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/ProyectoTransversal.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoTransversal
+endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Usuario\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=D:\\Escritorio\\jcalendar-1.4.jar
@@ -44,12 +46,6 @@ file.reference.mariadb-java-client-3.2.0.jar=D:\\Descargas\\mariadb-java-client-
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.mariadb-java-client-3.2.0.jar}:\
-    ${file.reference.jcalendar-1.4.jar-2}:\
-    ${file.reference.mariadb-java-client-3.1.4.jar}:\
-    ${file.reference.jcalendar-1.4.zip}:\
     ${file.reference.mariadb-java-client-3.0.11.jar}:\
     ${file.reference.jcalendar-1.4.jar-3}
 # Space-separated list of extra javac options
