--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ nbproject/private/private.properties
 /dist/
 nbproject/private/private.properties
 *.properties
+nbproject/private/private.properties
