--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,14 +3,8 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.jcalendar-1.4.jar=D:\\Escritorio\\Drive\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=D:\\Escritorio\\Drive\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-2=D:\\Escritorio\\Drive\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-3=C:\\Users\\Lean\\Documents\\Argentina Programa\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.zip=D:\\Escritorio\\Drive\\jcalendar-1.4.jar
-file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Lean\\Documents\\Argentina Programa\\mariadb-java-client-3.1.4 - Acceso directo.lnk
-file.reference.mariadb-java-client-3.1.4.jar=C:\\Users\\Lean\\Documents\\Argentina Programa\\mariadb-java-client-3.1.4.jar
-file.reference.mariadb-java-client-3.2.0.jar=D:\\Escritorio\\Drive\\mariadb-java-client-3.2.0.jar
+file.reference.jcalendar-1.4.jar-3=lib\\jcalendar-1.4.jar
+file.reference.mariadb-java-client-3.0.11.jar=lib\\mariadb-java-client-3.2.0.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
