--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -103,5 +103,7 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
+source.reference.jcalendar-1.4.jar-3=lib/jcalendar-1.4.jar
+source.reference.mariadb-java-client-3.0.11.jar=lib/mariadb-java-client-3.2.0.jar
 src.dir=src
 test.src.dir=test
