--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -84,7 +84,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ProyectoTransversal
-main.class=proyectotransversal.Vistas.Menu
+main.class=proyectotransversal.Vistas.Menu2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
