--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ nbproject/private/private.properties
 nbproject/private/private.properties
 *.properties
 nbproject/private/private.properties
+*.xml
+*.properties
