--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -44,7 +44,7 @@ file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Usuario\\Downloads\\mar
 file.reference.mariadb-java-client-3.1.4.jar=C:\\Users\\Lean\\Documents\\Argentina Programa\\mariadb-java-client-3.1.4.jar
 file.reference.mariadb-java-client-3.2.0.jar=D:\\Descargas\\mariadb-java-client-3.2.0.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.0.11.jar}:\
     ${file.reference.jcalendar-1.4.jar-3}:\
@@ -87,7 +87,7 @@ jlink.launcher.name=ProyectoTransversal
 main.class=proyectotransversal.Vistas.Menu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
